<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.addArtistas">


    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:ems="10"
        android:hint="@string/idDescription"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Population"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Province"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Country"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/MobileWork"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Personalmobile"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LandLine"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/WebBlog"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateBirth"
        android:inputType="date" />

    <Button
        android:id="@+id/bAddArtista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bAnadirArtist" />

</LinearLayout>