<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.addArtistas">


    <EditText
        android:id="@+id/editTextTextPersonName30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/idDescription"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Population"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Province"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Country"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/MobileWork"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Personalmobile"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LandLine"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/WebBlog"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDate4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateBirth"
        android:inputType="date" />

    <Button
        android:id="@+id/bUpdateArtista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bUpdate" />

</LinearLayout>