<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exhibitions"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_exhibitions" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_artist" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_works" />
        <item
            android:id="@+id/comentarios"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/comentary" />

    </group>
</menu>