<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/idExibicion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="135dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nameExhibition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="86dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="130dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/endExibition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="127dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/startExibition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tx_idExposicion"
            android:layout_width="179dp"
            android:layout_height="18dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_fecInicio"
            android:layout_width="181dp"
            android:layout_height="21dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/tx_descripcion" />

        <TextView
            android:id="@+id/tx_descripcion"
            android:layout_width="183dp"
            android:layout_height="20dp"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tx_nombreExpo" />

        <TextView
            android:id="@+id/tx_nombreExpo"
            android:layout_width="182dp"
            android:layout_height="18dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tx_idExposicion" />

        <TextView
            android:id="@+id/tx_populationArtista"
            android:layout_width="179dp"
            android:layout_height="18dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tx_fecInicio" />

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="250dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/bt_borrarExpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/bt_delExpo"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bt_modExpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/bt_modExpo"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bt_viewArtists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/viewHexhibition" />

            <Button
                android:id="@+id/buttonComentaries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/seeComentary" />

            <Button
                android:id="@+id/bt_participarArtista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/participate"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>






